fix: select2 to dark mode and adjust add and remove buttons into guia form

--- a/assets/css/config.css
+++ b/assets/css/config.css
@@ -229,3 +229,50 @@ body.theme-dark .table tbody tr:hover:not(.selected) > * {
   -webkit-flex-grow: 1;
   flex-grow: 1;
 }
+
+body.theme-dark .select2-results__option,
+body.theme-dark .select2-search__field,
+body.theme-dark
+  .select2-container--default
+  .select2-selection--single
+  .select2-selection__rendered {
+  color: #fff !important;
+}
+body.theme-dark .select2-dropdown,
+body.theme-dark .select2-container--default .select2-selection--single {
+  background-color: #191c24 !important;
+}
+body.theme-dark .select2-container--default .select2-results__option--selected,
+body.theme-dark .select2-search__field {
+  background-color: #191c24 !important;
+  border: 1px solid #2c2e33 !important;
+}
+
+body.theme-dark .select2-container--bootstrap-5 .select2-selection {
+  border: 1px solid #2c2e33 !important;
+  background-color: #2a3840 !important;
+  color: #fff !important;
+}
+
+body.theme-dark
+  .select2-container--bootstrap-5
+  .select2-dropdown
+  .select2-results__options
+  .select2-results__option.select2-results__option--highlighted {
+  border: 1px solid #2c2e33 !important;
+  color: #fff !important;
+}
+
+.select2-container--bootstrap-5
+  .select2-selection--single
+  .select2-selection__rendered {
+  color: #fff !important;
+}
+
+body.theme-dark
+  .select2-container--bootstrap-5
+  .select2-dropdown
+  .select2-results__options
+  .select2-results__option.select2-results__option--highlighted {
+  background: #2a3840 !important;
+}
